--- a/button.css
+++ b/button.css
@@ -1,13 +1,42 @@
 button {
   height: 30px;
+  width: 30px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 2px;
+  background-color: #eee;
+}
+
+button.dl {
+  height: 30px;
+  width: 100px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 2px;
+  color: #FFF;
+  background-color: #999;
+}
+
+button.save {
+  height: 30px;
   width: 80px;
   outline: none;
   margin: 10px;
   border: none;
   border-radius: 2px;
+  background-color: #eee;
 }
-
-button.current {
-  box-shadow: 0 0 0 2px white,
-              0 0 0 4px black;
+input {
+  margin: 0.1em 0.2em 0.1em 0.2em;
+  border: 1px solid #aaa;
+  background: #fff;
+  border-radius: 1;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #333;
 }
